# rust-swift

./: .gitignore  fix.sh
UsingRustLib_v1/: Build_iOS.sh  Cargo.toml
UsingRustLib_v1/src/: lib.rs
UsingRust_v1.xcodeproj/: project.pbxproj
UsingRust_v1.xcodeproj/xcshareddata/xcschemes/: UsingRust_v1.xcscheme
UsingRust_v1/RustLibrary/: UsingRust_v1.h
